--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="gallery-item h-100">
               <img src="assets/monstremas/1.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/monstremas/1.png" title="Monstrema 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/1.png" title="Monstrema n.º rompantes" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item 1 -->
@@ -101,7 +101,7 @@
             <div class="gallery-item h-100">
               <img src="assets/monstremas/2.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/monstremas/2.png" title="Monstrema 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/2.png" title="Monstrema n.º feridas" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item 2 -->
@@ -110,7 +110,7 @@
             <div class="gallery-item h-100">
               <img src="assets/monstremas/3.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/monstremas/3.png" title="Monstrema 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/3.png" title="Monstrema n.º dobre de finados" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item 3 -->
@@ -119,7 +119,7 @@
             <div class="gallery-item h-100">
               <img src="assets/monstremas/4.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/monstremas/4.png" title="Monstrema 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/4.png" title="Monstrema n.º grito" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item 4 -->
