--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
             <div class="gallery-item h-100">
               <img src="assets/monstremas/1.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/monstremas/1.png" title="Monstrema n.º rompantes" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/1o.png" title="Monstrema n.º rompantes: Para quem acabou de nascer, o cuidado é uma novidade aterrorizantemente reconfortante quando a agonia, até então desconhecida, passa a evocar nomes." class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/1.webp" title="Monstrema n.º rompantes: Para quem acabou de nascer, o cuidado é uma novidade aterrorizantemente reconfortante quando a agonia, até então desconhecida, passa a evocar nomes." class="glightbox preview-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item 1 -->
@@ -101,7 +102,8 @@
             <div class="gallery-item h-100">
               <img src="assets/monstremas/2.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/monstremas/2.png" title="Monstrema n.º feridas" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/2o.png" title="Monstrema n.º feridas: No repasto a ambição é sempre um obstáculo às alegrias, principalmente, quando ulcera a vida com o remorso de súplicas infindas." class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/2.webp" title="Monstrema n.º feridas: No repasto a ambição é sempre um obstáculo às alegrias, principalmente, quando ulcera a vida com o remorso de súplicas infindas." class="glightbox preview-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item 2 -->
@@ -110,7 +112,8 @@
             <div class="gallery-item h-100">
               <img src="assets/monstremas/3.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/monstremas/3.png" title="Monstrema n.º dobre de finados" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/3o.png" title="Monstrema n.º dobre de finados: Quem se interessaria por um cadáver senão o matador que embolsa o pagamento." class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/3.webp" title="Monstrema n.º dobre de finados: Quem se interessaria por um cadáver senão o matador que embolsa o pagamento." class="glightbox preview-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item 3 -->
@@ -119,7 +122,9 @@
             <div class="gallery-item h-100">
               <img src="assets/monstremas/4.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/monstremas/4.png" title="Monstrema n.º grito" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/4o.png" title="Monstrema n.º grito: O que não se pode dizer, voa a galope, espalhando-se sob as asas de um cavalo do cão." class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/monstremas/4.webp" title="Monstrema n.º grito: O que não se pode dizer, voa a galope, espalhando-se sob as asas de um cavalo do cão." class="glightbox preview-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
               </div>
             </div>
           </div><!-- End Gallery Item 4 -->
